--- a/main.css
+++ b/main.css
@@ -26,6 +26,7 @@ body {
   justify-content: center;
 }
 .card{
-  margin: 10px;
-  
+  margin: 10px; 
+  text-align: center; 
+  min-width: 250px;
 }
