--- a/main.css
+++ b/main.css
@@ -28,5 +28,9 @@ body {
 .card{
   margin: 10px; 
   text-align: center; 
-  min-width: 250px;
+}
+.card-img-top{
+  width: 100%;
+  height: 300px;
+  object-fit: scale-down;
 }
