--- a/main.css
+++ b/main.css
@@ -138,6 +138,7 @@ body {
   min-width: 300px;
 }
 /* end form */
+
 /* ---index.html--- */
 .carousel {
     margin: 0 auto 5vw;
@@ -254,6 +255,7 @@ body {
 }
 
 /* ---end index.html--- */
+
 /* ---about.html---*/
 .about img {
     height: 300px;
@@ -322,3 +324,13 @@ body {
     text-align: center;
 }
 /* ---End Footer---*/
+
+.color-swatches {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-position: center;
+  object-fit: none;
+  border: 1px solid #999;
+  padding: 1px; 
+}
