added cart checkout page and various final touchups

--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ body {
   margin: 10px; 
   text-align: center; 
 }
+
 .card-img-top{
   width: 100%;
   height: 300px;
@@ -66,7 +67,9 @@ body {
 /* end categories */
 /* sort filter button */
 .dropdown{
-  margin-left: 20px;
+  width: 100%;
+  margin: auto;
+  text-align: center;
 }
 /* start form */
 .formContainer{
@@ -348,4 +351,11 @@ body {
 #cart-count {
   vertical-align: top;
     margin-left: -1.3rem; 
+}
+
+.cart-thumbnail {
+  width: 100%;
+  height: 30vh;
+  object-fit: cover;
+  object-position: top;
 }
